# SIEN-cuda

./: CMakeLists.txt  README.md  run.sh
data/ele/: .~0-ele初始数据说明.xlsx  0-ele初始数据说明.xlsx  100pa-10kv-s.zs3  100pa_s.zs3  1na-10kv-s.zs3  1na-s.zs4  20pa1-10kv-s.zs3  20pa1-s.zs3  300pa-10kv-s.zs3  300pa-s.zs3  3na-10kv-s.zs4  3na-s.zs4  50pa-10kv-s.zs3  50pa-s.zs3
data/ion/: 0_ion初始数据说明.xlsx  100paond12-1000s.zs6  10paond12-200-1.zs6  20paond12-1-400s.zs6  30paond12-400s.zs1  50paond12-200s.zs6  70paond12-1000s.zs6
header/: check.h  nbody.h  particle.h  settings.h  timer.h
src/: main.cu  main_v0.cu  nbody.cu  particle.cu  settings.cu
